--- a/app/views/site/about.html.erb
+++ b/app/views/site/about.html.erb
@@ -1,2 +1,2 @@
-<h1>Site#about</h1>
-<p>Find me in app/views/site/about.html.erb</p>
+<h1>About Us</h1>
+<p>This is going to be my first ever social networking website.</p>
