--- a/app/views/site/help.html.erb
+++ b/app/views/site/help.html.erb
@@ -1,2 +1,2 @@
-<h1>Site#help</h1>
-<p>Find me in app/views/site/help.html.erb</p>
+<h1>Help</h1>
+<p>This page will have instructions and a frequently asked questions list.</p>
