--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -1,2 +1,2 @@
-<h1>Site#index</h1>
-<p>Find me in app/views/site/index.html.erb</p>
+<h1>Welcome to RailSpace!</h1>
+<p>This is my first site on rails!</p>
