--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>RailsSpace</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
-
-  <body>
-    <%= yield %>
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title><%= @title %></title>
+    <%= stylesheet_link_tag "application" %>
+</head>
+<body>
+    <div id="whole_page">
+        <div id="header">RailSpace</div>
+        <div id="nav">
+            <%= link_to_unless_current "Home", :controller => "site", :action => "index" %> | 
+            <%= link_to_unless_current "Register", :controller => "user", :action => "register" %> |
+            <%= link_to_unless_current "About Us", :controller => "site", :action => "about" %> |
+            <%= link_to_unless_current "Help", :controller => "site", :action => "help" %>
+        </div>
+        <div id="content">
+            <%= yield %>
+        </div>
+    </div>
+</body>
 </html>
