--- a/app/views/user/register.html.erb
+++ b/app/views/user/register.html.erb
@@ -7,17 +7,17 @@
         
         <div class="form-row">
             <label for="screen_name">Screen name:</label>
-            <%= f.text_field :screen_name %>
+            <%= f.text_field :screen_name, :size => User::SCREEN_NAME_SIZE, :maxlength => User::SCREEN_NAME_MAX_LENGTH %>
         </div>
 
         <div class="form-row">
             <label for="email">Email</label>
-            <%= f.text_field :email %>
+            <%= f.text_field :email, :size => User::EMAIL_SIZE, :maxlength => User::EMAIL_MAX_LENGTH %>
         </div>
 
         <div class="form-row">
             <label for="password">Password</label>
-            <%= f.text_field :password %>
+            <%= f.text_field :password, :size => User::PASSWORD_SIZE, :maxlength => User::PASSWORD_MAX_LENGTH %>
         </div>
 
         <div class="form-row">
