--- a/app/views/user/register.html.erb
+++ b/app/views/user/register.html.erb
@@ -4,7 +4,7 @@
     <!-- form_for @object, html: { class: "classname" }, do |f| -->
     <fieldset>
         <legend>Enter Your Details</legend>
-        
+        <%= error_messages_for "user" %>
         <div class="form-row">
             <label for="screen_name">Screen name:</label>
             <%= f.text_field :screen_name, :size => User::SCREEN_NAME_SIZE, :maxlength => User::SCREEN_NAME_MAX_LENGTH %>
@@ -17,7 +17,7 @@
 
         <div class="form-row">
             <label for="password">Password</label>
-            <%= f.text_field :password, :size => User::PASSWORD_SIZE, :maxlength => User::PASSWORD_MAX_LENGTH %>
+            <%= f.password_field :password, :size => User::PASSWORD_SIZE, :maxlength => User::PASSWORD_MAX_LENGTH %>
         </div>
 
         <div class="form-row">
